fix dark mode switch

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -42,7 +42,7 @@
 
     &:before,
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       transform-origin: 0 0;
     }
