--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ $secondary: #fff;
   --text-accent-shadows-brighter: #{color.scale($secondary, $lightness: -20%)};
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   --text-color: #{$secondary};
   --bg-color: #{$primary};
   --text-accent: #{color.scale($primary, $lightness: 10%)};
@@ -26,18 +26,18 @@ $secondary: #fff;
 
 html,
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: var(--text-color);
   background: var(--bg-color);
   min-height: 100vh;
 }
 
 .fully-hidden {
-    display: none;
-    visibility: hidden;
-    position: absolute;
-    width: 0;
-    height: 0;
-    margin: 0;
-    padding: 0;
+  display: none;
+  visibility: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
 }
